Thu Jul 23 12:26:47 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: Add UndefineAll, ProtectAll, make Undefine an alias
	  for undefine.

	* src/dict.[ch], src/eval.c: allow setting of protected parameters,
	  they just can't be deleted or changed

	* lib/*.gel: Use the ProtectAll function

	* src/testscope.gel: add extra tests

Wed Jul 22 14:44:10 2009  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: raise version, require slightly newer glib (2.10)

	* src/compil.c, src/dict.[ch], src/eval.[ch], src/lexer.l,
	  src/parse.y, src/parseutil.[ch], src/structs.h:  Add local
	  variables (not seen by higher contexts).  Also fix several minor
	  issues relating to dictionaries and lookup, mainly subst list
	  function is not substituted again if it is passed up and down the
	  contexts, and substitution is done in a smarter way.

	* src/dict.[ch], src/gnome-genius.c: Redo the way contexts are done
	  to get rid of some gslists

	* src/mpwrap.[ch]: allocate new real nums in a smarter way (by large
	  blocks) and put no limit on the number of real number structures
	  on the free list.

	* src/geniustests.txt, src/testscope.gel:  Add scope tests

Wed Jul 22 00:30:36 2009  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: update for newest info from
	  GIMPS.  Also fix MersennePrimeExponents (it had 3 columns by
	  mistake)

Fri Jul 10 14:53:41 2009  Jiri (George) Lebl <jirka@5z.com>

	* help/C/figures/genius_window.png, help/C/figures/line_plot.png,
	  help/C/figures/line_plot_graph.png, help/C/figures/parametric.png,
	  help/C/figures/parametric_graph.png,
	  help/C/figures/surface_graph.png, pixmaps/32x32/gnome-genius.png,
	  pixmaps/48x48/gnome-genius.png, pixmaps/genius-graph.png:
	  Optimize PNGs

Thu Apr 23 01:32:06 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Fix opening new files from the command line.
	  It just works now.

	* lib/calculus/Makefile.am, lib/calculus/fourier.gel:  Add some