@@ -1,3 +1,14 @@
+Thu Jul 23 16:28:59 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/dict.c, src/eval.c: remove some forgotten debug prints
+
+	* src/eval.c: do not allow setting a new parameter over a protected
+	  id
+
+	* src/funclib.c: Add UserVariables function
+
+	* src/geniustests.txt, src/testscope.gel: add new tests
+
 Thu Jul 23 12:26:47 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/funclib.c: Add UndefineAll, ProtectAll, make Undefine an alias
